--- a/styles.css
+++ b/styles.css
@@ -719,6 +719,13 @@ nav {
     color: white;
 }
 
+.steps {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 3rem;
+    margin-top: 4rem;
+}
+
 .step {
     display: flex;
     gap: 1.5rem;
