--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -15,9 +15,9 @@
             <div class="footer-column">
                 <h3>Product</h3>
                 <ul>
-                    <li><a href="/docs/index.html"><i class="fa-solid fa-file-lines"></i> Documentation</a></li>
-                    <li><a href="/product/no-code-builder.html"><i class="fa-solid fa-cubes"></i> No-code builder</a></li>
-                    <li><a href="/product/no-code-steps.html"><i class="fa-solid fa-list-check"></i> No-code steps</a></li>
+                    <li><a href="#" id="footer-docs"><i class="fa-solid fa-file-lines"></i> Documentation</a></li>
+                    <li><a href="#" id="footer-no-code-builder"><i class="fa-solid fa-cubes"></i> No-code builder</a></li>
+                    <li><a href="#" id="footer-no-code-steps"><i class="fa-solid fa-list-check"></i> No-code steps</a></li>
                     <li><a href="#pricing"><i class="fa-solid fa-tag"></i> Pricing</a></li>
                 </ul>
             </div>
@@ -27,7 +27,7 @@
                     <li><a href="#"><i class="fa-solid fa-robot"></i> Automate website actions</a></li>
                     <li><a href="#"><i class="fa-solid fa-keyboard"></i> Automate Data Entry</a></li>
                     <li><a href="#"><i class="fa-solid fa-pen-to-square"></i> Automate Form Filling</a></li>
-                    <li><a href="/product/templates.html"><i class="fa-solid fa-puzzle-piece"></i> Automation templates</a></li>
+                    <li><a href="#" id="footer-templates"><i class="fa-solid fa-puzzle-piece"></i> Automation templates</a></li>
                 </ul>
             </div>
             <div class="footer-column">
@@ -41,7 +41,48 @@
             </div>
         </div>
         <div class="copyright">
-            <p>&copy; 2025 selenix.io. All rights reserved.</p>
+            <p>&copy; <span class="footer-copyright-year">2025</span> selenix.io. All rights reserved.</p>
         </div>
     </div>
 </footer>
+
+<script>
+    // Update copyright year
+    (function() {
+        const yearSpan = document.querySelector('.footer-copyright-year');
+        if (yearSpan) {
+            yearSpan.textContent = new Date().getFullYear();
+        }
+        
+        // Fix navigation paths based on the current location
+        const pathParts = window.location.pathname.split('/').filter(Boolean);
+        const isRootPath = pathParts.length === 0 || (pathParts.length === 1 && pathParts[0] === 'index.html');
+        const isFirstLevel = pathParts.length === 1 || (pathParts.length === 2 && pathParts[1] === 'index.html');
+        let prefix = '';
+        
+        // Add proper prefix based on path depth
+        if (!isRootPath) {
+            if (!isFirstLevel) {
+                prefix = '../';  // For deeper paths like product/templates
+            } else {
+                prefix = './';   // For first level paths like docs/ or product/
+            }
+        }
+        
+        // Update footer links
+        const footerLinks = {
+            'footer-docs': prefix + 'docs/index.html',
+            'footer-no-code-builder': prefix + 'product/no-code-builder.html',
+            'footer-no-code-steps': prefix + 'product/no-code-steps.html',
+            'footer-templates': prefix + 'product/templates.html'
+        };
+        
+        // Update each link href
+        Object.keys(footerLinks).forEach(id => {
+            const element = document.getElementById(id);
+            if (element) {
+                element.href = footerLinks[id];
+            }
+        });
+    })();
+</script>
