--- a/components/navbar/navbar.html
+++ b/components/navbar/navbar.html
@@ -13,7 +13,7 @@
                         <a href="/product/no-code-builder.html" id="nav-no-code-builder">No-code builder</a>
                         <a href="/product/no-code-steps.html" id="nav-no-code-steps">No-code steps</a>
                         <a href="/product/bot-runner.html" id="nav-bot-runner">Bot runner</a>
-                        <a href="/product/templates.html" id="nav-templates">Templates</a>
+                        <a href="/product/templates/index.html" id="nav-templates">Templates</a>
                         <a href="/product/video-guides.html" id="nav-video-guides">Video guides</a>
                         <a href="/product/release-notes.html" id="nav-release-notes">Release notes</a>
                     </div>
@@ -47,7 +47,7 @@
             'nav-no-code-builder': isInProductDir ? './no-code-builder.html' : '/product/no-code-builder.html',
             'nav-no-code-steps': isInProductDir ? './no-code-steps.html' : '/product/no-code-steps.html',
             'nav-bot-runner': isInProductDir ? './bot-runner.html' : '/product/bot-runner.html',
-            'nav-templates': isInProductDir ? './templates.html' : '/product/templates.html',
+            'nav-templates': isInProductDir ? './templates/index.html' : '/product/templates/index.html',
             'nav-video-guides': isInProductDir ? './video-guides.html' : '/product/video-guides.html',
             'nav-release-notes': isInProductDir ? './release-notes.html' : '/product/release-notes.html'
         };
