--- a/product/templates/index.html
+++ b/product/templates/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Automation Templates - Selenix.io</title>
-    <link rel="stylesheet" href="../styles.css">
-    <link rel="stylesheet" href="../components/components.css">
+    <link rel="stylesheet" href="../../styles.css">
+    <link rel="stylesheet" href="../../components/components.css">
     <link rel="stylesheet" href="templates.css">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <!-- Favicon -->
-    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
 </head>
 <body>
     <!-- Navbar Component will be loaded here -->
@@ -30,7 +30,7 @@
                         <i class="fa-solid fa-download"></i>
                         Browse Templates
                     </a>
-                    <a href="../docs/templates.html" class="secondary-outline-button">
+                    <a href="../../docs/index.html#templates" class="secondary-outline-button">
                         <i class="fa-solid fa-book"></i>
                         Learn How to Use Templates
                     </a>
@@ -464,7 +464,7 @@
                         <li><i class="fa-solid fa-check"></i> Help others automate their tasks</li>
                         <li><i class="fa-solid fa-check"></i> Showcase your automation skills</li>
                     </ul>
-                    <a href="../docs/create-templates.html" class="primary-button">
+                    <a href="../../docs/index.html#create-templates" class="primary-button">
                         <i class="fa-solid fa-upload"></i>
                         Learn How to Create Templates
                     </a>
@@ -486,7 +486,7 @@
                         <i class="fa-solid fa-download"></i>
                         Download Selenix
                     </a>
-                    <a href="/docs" class="secondary-outline-button">
+                    <a href="../../docs/index.html" class="secondary-outline-button">
                         <i class="fa-solid fa-book"></i>
                         Read Documentation
                     </a>
@@ -498,10 +498,10 @@
     <!-- Footer Component will be loaded here -->
     <div id="footer-container"></div>
 
-    <script src="../script.js"></script>
-    <script src="../components/components.js"></script>
-    <script src="../components/navbar/navbar.js"></script>
-    <script src="../components/footer/footer.js"></script>
+    <script src="../../script.js"></script>
+    <script src="../../components/components.js"></script>
+    <script src="../../components/navbar/navbar.js"></script>
+    <script src="../../components/footer/footer.js"></script>
     <script src="templates.js"></script>
 </body>
 </html>
