navbar, indexhtml for product set

--- a/components/navbar/navbar.html
+++ b/components/navbar/navbar.html
@@ -10,17 +10,17 @@
                 <div class="dropdown">
                     <a href="#" class="dropdown-toggle" id="nav-product">Product <i class="fas fa-chevron-down"></i></a>
                     <div class="dropdown-menu">
-                        <a href="/product/no-code-builder.html" id="nav-no-code-builder">No-code builder</a>
-                        <a href="/product/no-code-steps.html" id="nav-no-code-steps">No-code steps</a>
-                        <a href="/product/bot-runner.html" id="nav-bot-runner">Bot runner</a>
+                        <a href="/product/no-code-builder/index.html" id="nav-no-code-builder">No-code builder</a>
+                        <a href="/product/no-code-steps/index.html" id="nav-no-code-steps">No-code steps</a>
+                        <a href="/product/bot-runner/index.html" id="nav-bot-runner">Bot runner</a>
                         <a href="/product/templates/index.html" id="nav-templates">Templates</a>
-                        <a href="/product/video-guides.html" id="nav-video-guides">Video guides</a>
-                        <a href="/product/release-notes.html" id="nav-release-notes">Release notes</a>
+                        <a href="/product/video-guides/index.html" id="nav-video-guides">Video guides</a>
+                        <a href="/product/release-notes/index.html" id="nav-release-notes">Release notes</a>
                     </div>
                 </div>
-                <a href="#pricing" id="nav-pricing">Pricing</a>
-                <a href="#support" id="nav-support">Support</a>
-                <a href="#blog" id="nav-blog">Blog</a>
+                <a href="/pricing/index.html" id="nav-pricing">Pricing</a>
+                <a href="/support/index.html" id="nav-support">Support</a>
+                <a href="/blog/index.html" id="nav-blog">Blog</a>
             </div>
             <a href="#download" class="cta-button">
                 <i class="fa-solid fa-download"></i>
