--- a/components/navbar/navbar.html
+++ b/components/navbar/navbar.html
@@ -1,5 +1,5 @@
 <!-- Universal Navbar Component -->
-<header>
+<header class="navbar-header">
     <div class="container">
         <nav>
             <a href="/" class="logo">
@@ -20,9 +20,9 @@
                 </div>
                 <a href="/pricing/index.html" id="nav-pricing">Pricing</a>
                 <a href="/support/index.html" id="nav-support">Support</a>
-                <a href="/blog/index.html" id="nav-blog">Blog</a>
+                <a href="/blog/blog.php" id="nav-blog">Blog</a>
             </div>
-            <a href="#download" class="cta-button">
+            <a href="/download.php" class="cta-button">
                 <i class="fa-solid fa-download"></i>
                 Download Selenix
             </a>
