--- a/product/templates/index.html
+++ b/product/templates/index.html
@@ -35,43 +35,8 @@
     </script>
 </head>
 <body>
-    <!-- Navbar Component will be loaded here -->
-    <div id="navbar-container">
-        <!-- Fallback navbar if component loading fails -->
-        <header>
-            <div class="container">
-                <nav>
-                    <a href="../../index.html" class="logo">
-                        <span class="logo-text">selenix<span class="logo-dot">.</span>io</span>
-                    </a>
-                    <div class="nav-links">
-                        <a href="../../docs/index.html" id="nav-docs">Docs</a>
-                        <div class="dropdown">
-                            <a href="#" class="dropdown-toggle active" id="nav-product">Product <i class="fas fa-chevron-down"></i></a>
-                            <div class="dropdown-menu">
-                                <a href="../no-code-builder.html" id="nav-no-code-builder">No-code builder</a>
-                                <a href="../no-code-steps.html" id="nav-no-code-steps">No-code steps</a>
-                                <a href="../bot-runner.html" id="nav-bot-runner">Bot runner</a>
-                                <a href="../templates.html" id="nav-templates" class="active">Templates</a>
-                                <a href="../video-guides.html" id="nav-video-guides">Video guides</a>
-                                <a href="../release-notes.html" id="nav-release-notes">Release notes</a>
-                            </div>
-                        </div>
-                        <a href="#pricing" id="nav-pricing">Pricing</a>
-                        <a href="#support" id="nav-support">Support</a>
-                        <a href="#blog" id="nav-blog">Blog</a>
-                    </div>
-                    <a href="#download" class="cta-button">
-                        <i class="fa-solid fa-download"></i>
-                        Download Selenix
-                    </a>
-                    <div class="mobile-menu-button">
-                        <i class="fa-solid fa-bars"></i>
-                    </div>
-                </nav>
-            </div>
-        </header>
-    </div>
+    <!-- Navbar Component -->
+    <div id="navbar-container"></div>
 
     <section class="templates-hero">
         <div class="container">
@@ -553,8 +518,6 @@
 
     <script src="../../script.js"></script>
     <script src="../../components/components.js"></script>
-    <script src="../../components/navbar/navbar.js"></script>
-    <script src="../../components/footer/footer.js"></script>
     <script src="templates.js"></script>
     
     <!-- Script Loading Debug -->
